--- a/templates/base.html
+++ b/templates/base.html
@@ -39,15 +39,26 @@
               Szybkośc działania gwarantowana dzięki technologi Django
             </p>
           </div>
-
-          <div class="col s4">
-            <div class="center">
-              <i class="large material-icons" style="color: orange;">camera</i>
-              <p>Filtruj wyszukiwania</p>
-              <p class="light center">
-                Wyszukaj co tylko zechcesz!
-              </p>
-            </div>
+        </div>
+        <div class="col s4">
+          <div class="center">
+            <i class="large material-icons" style="color: orange;">camera</i>
+            <p>Filtruj co tylko chcesz!</p>
+            <p class="light center">
+              Wyszukaj co tylko zechcesz!
+            </p>
+          </div>
+        </div>
+        <div class="col s4">
+          <div class="center">
+            <i class="large material-icons" style="color: blue;"
+              >chrome_reader_mode</i
+            >
+            <p>Strona dla uczniów</p>
+            <p class="light center">
+              Zbudowana z sercem
+            </p>
+          </div>
         </div>
       </div>
 
