--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,21 @@
         </div>
       </div>
 
-      {% block content %} {% endblock content %}
+      {% block content %}
+      <h2 style="text-align: center;">Wyszukaj co tylko zechcesz</h2>
+      <form action="{% url 'new_search' %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="search" placeholder="Szukaj" />
+        <button
+          class="btn waves-effect waves-light"
+          type="submit"
+          name="action"
+        >
+          Szukaj
+          <i class="material-icons right">search</i>
+        </button>
+      </form>
+      {% endblock content %}
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </div>
   </body>
