--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -1,3 +1,92 @@
 {% extends 'base.html' %} {% block content %}
-<form action="{% url 'new_search' %}"></form>
-{% endblock %}
+<h2 style="text-align: center;">Wyszukaj co tylko zechcesz</h2>
+<form action="{% url 'new_search' %}" method="POST">
+  {% csrf_token %}
+  <input type="text" name="search" placeholder="Szukaj" />
+  <button class="btn waves-effect waves-light" type="submit" name="action">
+    Szukaj
+    <i class="material-icons right">search</i>
+  </button>
+</form>
+
+<div class="row">
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img
+          class="activator"
+          src="https://materializecss.com/images/office.jpg"
+        />
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4"
+          >Card Title<i class="material-icons right">more_vert</i></span
+        >
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"
+          >Card Title<i class="material-icons right">close</i></span
+        >
+        <p>
+          Here is some more information about this product that is only revealed
+          once clicked on.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img
+          class="activator"
+          src="https://materializecss.com/images/office.jpg"
+        />
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4"
+          >Card Title<i class="material-icons right">more_vert</i></span
+        >
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"
+          >Card Title<i class="material-icons right">close</i></span
+        >
+        <p>
+          Here is some more information about this product that is only revealed
+          once clicked on.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img
+          class="activator"
+          src="https://materializecss.com/images/office.jpg"
+        />
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4"
+          >Card Title<i class="material-icons right">more_vert</i></span
+        >
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"
+          >Card Title<i class="material-icons right">close</i></span
+        >
+        <p>
+          Here is some more information about this product that is only revealed
+          once clicked on.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock content %}
